work in progress

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,9 @@
 S3method(predict,cat2num)
 S3method(predict,cbc)
 S3method(predict,const2rm)
+S3method(predict,cor2rm)
 S3method(predict,data2dict)
+S3method(predict,data2prep)
 S3method(predict,na2rm)
 S3method(predict,num2bin)
 S3method(predict,num2norm)
@@ -12,9 +14,20 @@ S3method(predict,nzv2rm)
 export(cat2num)
 export(cbc)
 export(const2rm)
+export(cor2rm)
 export(data2dict)
+export(data2dt)
 export(data2formula)
+export(data2isof)
+export(data2kernlab)
+export(data2nb)
+export(data2nnet)
+export(data2prep)
+export(data2rf)
 export(data2sets)
+export(data2svm)
+export(data2svm1)
+export(data2xbg)
 export(dict2x)
 export(dict2xcat)
 export(dict2xnum)
