work in progress

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,12 +5,17 @@ S3method(predict,cbc)
 S3method(predict,const2rm)
 S3method(predict,cor2rm)
 S3method(predict,data2dict)
-S3method(predict,data2prep)
+S3method(predict,kmsvm)
 S3method(predict,na2rm)
+S3method(predict,nbtree)
+S3method(predict,num2bcp)
 S3method(predict,num2bin)
-S3method(predict,num2norm)
-S3method(predict,num2trafo)
+S3method(predict,num2dtf)
+S3method(predict,num2gasvm)
+S3method(predict,num2rf)
+S3method(predict,num2scale)
 S3method(predict,nzv2rm)
+S3method(predict,rsvm)
 export(cat2num)
 export(cbc)
 export(const2rm)
@@ -22,7 +27,6 @@ export(data2isof)
 export(data2kernlab)
 export(data2nb)
 export(data2nnet)
-export(data2prep)
 export(data2rf)
 export(data2sets)
 export(data2svm)
@@ -32,10 +36,20 @@ export(dict2x)
 export(dict2xcat)
 export(dict2xnum)
 export(dict2y)
+export(kmsvm)
 export(na2rm)
+export(nbtree)
+export(num2bcp)
 export(num2bin)
-export(num2norm)
+export(num2dtf)
+export(num2gasvm)
+export(num2int)
+export(num2log)
 export(num2pca)
-export(num2trafo)
+export(num2profile)
+export(num2rf)
+export(num2scale)
+export(num2sq)
 export(nzv2rm)
-export(tfeat)
+export(rssvm)
+export(time2feat)
