work in progress

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,14 +10,20 @@ S3method(predict,na2rm)
 S3method(predict,nbtree)
 S3method(predict,num2bcp)
 S3method(predict,num2bin)
+S3method(predict,num2dif)
+S3method(predict,num2div)
+S3method(predict,num2dot)
 S3method(predict,num2dtf)
 S3method(predict,num2gasvm)
-S3method(predict,num2rf)
+S3method(predict,num2imp)
+S3method(predict,num2log)
 S3method(predict,num2scale)
+S3method(predict,num2sum)
 S3method(predict,nzv2rm)
 S3method(predict,rsvm)
 export(cat2num)
 export(cbc)
+export(cm)
 export(const2rm)
 export(cor2rm)
 export(data2dict)
@@ -32,6 +38,8 @@ export(data2sets)
 export(data2svm)
 export(data2svm1)
 export(data2xbg)
+export(data2xcat)
+export(data2xnum)
 export(dict2x)
 export(dict2xcat)
 export(dict2xnum)
@@ -41,15 +49,18 @@ export(na2rm)
 export(nbtree)
 export(num2bcp)
 export(num2bin)
+export(num2dif)
+export(num2div)
+export(num2dot)
 export(num2dtf)
 export(num2gasvm)
+export(num2imp)
 export(num2int)
 export(num2log)
 export(num2pca)
 export(num2profile)
-export(num2rf)
 export(num2scale)
-export(num2sq)
+export(num2sum)
 export(nzv2rm)
 export(rssvm)
 export(time2feat)
